processed/gerrit/txt/31162.txt
Change:     31162
Subject:    LU-10603 ptlrpc: export req_buffers_max via procfs
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/31162
Change-Id:  Ie4806b79d104c7ea9aa34b6a8a280587fccef689
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Alex Zhuravlev
Created:    2018-02-05 10:11:18.000000000
Updated:    2018-02-22 05:40:45.000000000
Patch Set:  2
Insertions: +3
Deletions:  -0
Comments:   0 (0 unresolved)

--- Labels ---
  Code-Review: James Simmons: +1; Bruno Faccini: +1; Oleg Drokin: +2
  Verified: Jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Jenkins, Oleg Drokin, James Simmons, Bruno Faccini, Lustre Buildbot

--- Commit Message ---
LU-10603 ptlrpc: export req_buffers_max via procfs

after LU-9372 gcc7 complains:
lustre/ptlrpc/lproc_ptlrpc.c:382:16: error: ‘ptlrpc_lprocfs_req_buffers_max_fops’ defined but not used [-Werror=unused-const-variable=]
 LPROC_SEQ_FOPS(ptlrpc_lprocfs_req_buffers_max);
                 ^

Change-Id: Ie4806b79d104c7ea9aa34b6a8a280587fccef689
Signed-off-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Reviewed-on: https://review.whamcloud.com/31162
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Faccini Bruno <bruno.faccini@intel.com>
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>

--- Review History ---

--- Message (Alex Zhuravlev, 2018-02-05 10:11:18.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2018-02-05 10:13:57.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2018-02-05 10:16:51.000000000) ---
Patch Set 1:

Code-wise looks good to me.

--- Message (Lustre Buildbot, 2018-02-05 10:26:08.000000000) ---
Patch Set 1:

Overall Build Status: SUCCESS

Builder CentOS 6.7 x86_64 (BUILD) succeeded (build successful) - http://build.lustre.org/builders/CentOS%206.7%20x86_64%20%28BUILD%29/builds/13818

Builder CentOS 6.8 x86_64 (BUILD) succeeded (build successful) - http://build.lustre.org/builders/CentOS%206.8%20x86_64%20%28BUILD%29/builds/9954

Builder CentOS 7.2 x86_64 (BUILD) succeeded (build successful) - http://build.lustre.org/builders/CentOS%207.2%20x86_64%20%28BUILD%29/builds/13805

Builder Ubuntu 14.04 x86_64 (BUILD) succeeded (build successful) - http://build.lustre.org/builders/Ubuntu%2014.04%20x86_64%20%28BUILD%29/builds/13764

--- Message (Jenkins, 2018-02-05 10:31:36.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.hpdd.intel.com/job/lustre-reviews/54199/ : SUCCESS

--- Message (Autotest, 2018-02-05 10:34:06.000000000) ---
Patch Set 1:

Trevis Autotest started enforced review-ldiskfs session.

--- Message (Autotest, 2018-02-05 10:34:06.000000000) ---
Patch Set 1:

Trevis Autotest started optional review-dne-zfs-part-1 session.

--- Message (Autotest, 2018-02-05 10:34:07.000000000) ---
Patch Set 1:

Trevis Autotest started enforced review-dne-part-1 session.

--- Message (Autotest, 2018-02-05 10:34:07.000000000) ---
Patch Set 1:

Trevis Autotest started enforced review-zfs-part-1 session.

--- Message (Autotest, 2018-02-05 10:34:08.000000000) ---
Patch Set 1:

Trevis Autotest started enforced review-dne-part-3 session.

--- Message (Autotest, 2018-02-05 10:34:09.000000000) ---
Patch Set 1:

Trevis Autotest started enforced review-dne-part-2 session.

--- Message (Autotest, 2018-02-05 10:34:09.000000000) ---
Patch Set 1:

Trevis Autotest started enforced review-zfs-part-2 session.

--- Message (Autotest, 2018-02-05 10:34:10.000000000) ---
Patch Set 1:

Trevis Autotest started enforced review-dne-part-4 session.

--- Message (Autotest, 2018-02-07 14:25:52.000000000) ---
Patch Set 1:

Onyx Autotest retesting optional review-dne-zfs-part-1 session. Requested by Alex Zhuravlev because of LU-0000

--- Message (Autotest, 2018-02-07 14:25:53.000000000) ---
Patch Set 1:

Onyx Autotest retesting enforced review-ldiskfs session. Requested by Alex Zhuravlev because of LU-0000

--- Message (Autotest, 2018-02-07 14:25:53.000000000) ---
Patch Set 1:

Onyx Autotest retesting optional review-dne-zfs-part-2 session. Requested by Alex Zhuravlev because of LU-0000

--- Message (Autotest, 2018-02-07 14:25:55.000000000) ---
Patch Set 1:

Onyx Autotest retesting enforced review-dne-part-2 session. Requested by Alex Zhuravlev because of LU-0000

--- Message (Autotest, 2018-02-07 14:25:56.000000000) ---
Patch Set 1:

Onyx Autotest retesting enforced review-dne-part-1 session. Requested by Alex Zhuravlev because of LU-0000

--- Message (Autotest, 2018-02-07 14:25:56.000000000) ---
Patch Set 1:

Onyx Autotest retesting enforced review-dne-part-3 session. Requested by Alex Zhuravlev because of LU-0000

--- Message (Autotest, 2018-02-07 14:25:57.000000000) ---
Patch Set 1:

Onyx Autotest retesting enforced review-dne-part-4 session. Requested by Alex Zhuravlev because of LU-0000

--- Message (Autotest, 2018-02-07 14:25:58.000000000) ---
Patch Set 1:

Onyx Autotest retesting enforced review-zfs-part-2 session. Requested by Alex Zhuravlev because of LU-0000

--- Message (Autotest, 2018-02-07 14:25:59.000000000) ---
Patch Set 1:

Onyx Autotest retesting enforced review-zfs-part-1 session. Requested by Alex Zhuravlev because of LU-0000

--- Message (Bruno Faccini, 2018-02-08 15:14:45.000000000) ---
Patch Set 1: Code-Review+1

--- Message (James Simmons, 2018-02-13 19:39:43.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Oleg Drokin, 2018-02-22 05:38:54.000000000) ---
Patch Set 1: Code-Review+2

--- Message (unknown, 2018-02-22 05:40:45.000000000) ---
Change has been successfully cherry-picked as 3542f9780bf413849010143a5c72701620390120 by Oleg Drokin
